# jude-btc-swap

./: Cargo.toml  README.md
docs/: sequence.puml
docs/research/user-experience/: jude-btc-user-interface-definition 3.md  jude-btc-user-interface-validation 3.md
jude-harness/: Cargo.toml  README.md
jude-harness 3/tests/: juded.rs  wallet.rs
jude-harness 5/: Cargo.toml
jude-harness 5/tests/testutils/: mod.rs
jude-harness/src/: image.rs  lib.rs
jude-harness/tests/: juded.rs  wallet.rs
jude-rpc/: Cargo.toml  README.md
jude-rpc 3/src/rpc/: juded.rs
jude-rpc 5/src/: rpc.rs
jude-rpc/src/: juded.rs  lib.rs  wallet.rs
jude-rpc/src/rpc/: wallet.rs
jude-wallet/: Cargo.toml
jude-wallet/src/: lib.rs
swap/: Cargo.toml
swap/src/: bitcoin.rs  execution_params.rs  fs.rs  jude 3.rs  jude 4.rs  jude.rs  jude_ext.rs  lib.rs  protocol.rs  trace.rs
swap/src/asb/: amounts.rs  command.rs  config.rs  kraken.rs
swap/src/cli/: command.rs
swap/src/database/: alice.rs  bob.rs
swap/src/jude/: wallet.rs  wallet_rpc.rs
swap/src/jude 3/: wallet.rs
swap/src/jude 4/: wallet_rpc.rs
swap/src/jude 5/: wallet_rpc.rs
swap/src/jude 8/: wallet_rpc.rs
swap/src/network/: request_response.rs
swap/src/protocol/: alice.rs  bob.rs
swap/src/protocol/alice/: behaviour.rs  event_loop.rs  state.rs  (+5 more)
swap/tests/: concurrent_bobs_after_jude_lock_proof_sent.rs  concurrent_bobs_before_jude_lock_proof_sent.rs  happy_path_restart_alice_after_jude_locked.rs  happy_path_restart_bob_after_jude_locked.rs  happy_path_restart_bob_before_comm.rs
swap/tests/testutils/: mod.rs
(+5 files in other folders)
